--- a/src/app/controls/form-select-control/form-select.control.html
+++ b/src/app/controls/form-select-control/form-select.control.html
@@ -3,8 +3,8 @@
 
   {{label}}:
 </label>
-<select id="status" class="app-select form-control" name="status" (change)="onValueChange($event.target.value)" style="width: 100%">
-  <option *ngFor="let item of getItems()" value="{{item.value}}" [attr.selected]="getValue() === item.value ? 'selected' : null">
+<select id="status" class="app-select form-control" name="status" [(ngModel)]="value" (change)="onValueChange($event.target.value)" style="width: 100%">
+  <option *ngFor="let item of getItems()" [value]="item.value">
     {{item.name === '-' ? (item.value | translate) : item.name}}
   </option>
 </select>
