--- a/src/app/pages/login/login.page.less
+++ b/src/app/pages/login/login.page.less
@@ -16,3 +16,15 @@
   margin-top: 10%;
   margin-left: 25%;
 }
+
+.login-error {
+  background-color: @color-status_error_medium;
+  color: @color-fill_text_basic;
+  text-align: center;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.login-error-link {
+  color: @color-fill_text_basic_action_link !important;
+}
