--- a/src/app/pages/student/payment/payment-row/student-payment.row.less
+++ b/src/app/pages/student/payment/payment-row/student-payment.row.less
@@ -12,10 +12,22 @@
   width: 20%;
 }
 
+.payments-teachers-column {
+  .list-row-item;
+
+  width: 20%;
+}
+
+.payments-registered-column {
+  .list-row-item;
+
+  width: 20%;
+}
+
 .payments-actions-column {
   .list-row-item;
 
-  width: 60%;
+  width: 20%;
   display: flex;
   align-items: center;
   justify-content: flex-end;
