--- a/src/app/templates/modal/modal.template.html
+++ b/src/app/templates/modal/modal.template.html
@@ -1,5 +1,5 @@
 <div id="{{id}}" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true" #modal>
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog" role="document" style="min-width: 700px">
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="addAttendanceLabel">{{title}}</h5>
