--- a/src/styles.less
+++ b/src/styles.less
@@ -9,6 +9,7 @@
 @import 'styles/student-status.less';
 @import 'styles/scroll.less';
 @import 'styles/modal.less';
+@import 'styles/app-clickable-row.less';
 
 .no-padding {
   padding: 0 !important;
