--- a/src/app/templates/modal/modal.template.html
+++ b/src/app/templates/modal/modal.template.html
@@ -4,7 +4,7 @@
       <div class="modal-header">
         <h5 class="modal-title" id="addAttendanceLabel">{{title}}</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close" #closeButton>
-          <span aria-hidden="true">&times;</span>
+          <span class="app-modal-close-icon" aria-hidden="true">&times;</span>
         </button>
       </div>
 
