--- a/src/app/pages/group/information/group-information.page.html
+++ b/src/app/pages/group/information/group-information.page.html
@@ -129,7 +129,7 @@
     <div class="page-right-menu">
     </div>
 
-    <app-assign-lesson-popup [lessonInfo]="lessonInfo" (lessonInfoSaved)="onLessonInfoSaved($event)"></app-assign-lesson-popup>
+    <app-assign-lesson-popup [teachers]="teachers" [cabinets]="cabinets"></app-assign-lesson-popup>
   </div>
 
   <div class="footer">
