--- a/src/app/pages/students-list/students-list.page.html
+++ b/src/app/pages/students-list/students-list.page.html
@@ -48,7 +48,7 @@
         <div>{{student.name}}</div>
       </div>
       <div class="list-row-item student-groups-column-item">
-        <div *ngFor="let studentGroup of student.studentGroups">
+        <div *ngFor="let studentGroup of getStudentsActiveGroups(student)">
           <div app-group-icon [group]="getGroup(studentGroup.groupId)"></div>
         </div>
       </div>
