--- a/src/app/parts/header/header.component.less
+++ b/src/app/parts/header/header.component.less
@@ -9,10 +9,18 @@
   background: @color-fill_contrast_base;
 }
 
-.header-title {
+.header-title-section {
   color: @color-fill_text_inverse;
   width: 15%;
   font-family: hogwartsBold;
+}
+
+.header-body-section {
+  width: 70%;
+}
+
+.header-logout-section {
+  width: 15%;
 }
 
 .header-login-icon {
