--- a/src/styles/app-clickable-row.less
+++ b/src/styles/app-clickable-row.less
@@ -14,3 +14,7 @@
   cursor: pointer;
   background: @color-fill_basic_light;
 }
+
+.app-clickable-row-inactive {
+  color: @color-fill_text_basic_subtle;
+}
