--- a/src/app/pages/students-list/students-list.page.html
+++ b/src/app/pages/students-list/students-list.page.html
@@ -7,7 +7,7 @@
 
       <div app-search-text-input-control class="students-list-header-search student-name-column"
            [placeholder]="'Имя или номер телефона'"
-           (onChange)="onFilterChange($event, undefined, undefined)"></div>
+           (onChange)="onFilterChange($event,  undefined, undefined, undefined)"></div>
 
       <div class="student-groups-column-header">
         <div class="list-header-label">
@@ -15,11 +15,14 @@
         </div>
       </div>
 
+      <app-filter-age (onChange)="onFilterChange(undefined, $event, undefined, undefined)" class="students-list-header-search student-education-level-column"></app-filter-age>
+      <app-filter-education-level (onChange)="onFilterChange(undefined, undefined, $event, undefined)" class="students-list-header-search student-age-column"></app-filter-education-level>
+
       <div app-search-select-control class="students-list-header-search student-status-column"
            [empty]="'Все'"
            [items]="getStatusItems()"
            [defaultItem]="'STUDYING'"
-           (onChange)="onFilterChange(undefined, undefined, $event)"></div>
+           (onChange)="onFilterChange(undefined, undefined, undefined, $event)"></div>
 
     </div>
 
@@ -46,6 +49,12 @@
         <div *ngFor="let studentGroup of getStudentsActiveGroups(student)">
           <div app-group-icon [group]="getGroup(studentGroup.groupId)"></div>
         </div>
+      </div>
+      <div class="list-row-item student-age-column">
+        {{getAgeTranslationAsGroup(student.age)}}
+      </div>
+      <div class="list-row-item student-education-level-column">
+        {{getEducationLevelTranslation(student.educationLevel)}}
       </div>
       <div class="list-row-item student-status-column-item">
         <div app-student-status [studentStatusType]="student.statusType"></div>
