--- a/src/app/parts/header/header.component.less
+++ b/src/app/parts/header/header.component.less
@@ -49,7 +49,7 @@
   .menu-element;
 
   font-family: hogwartsRegular;
-  color: @color-fill_text_basic_action_link;
+  color: @color-fill_text_basic;
 }
 
 .menu-element-inactive:hover {
@@ -62,8 +62,8 @@
 
   font-family: hogwartsBold;
   opacity: 1;
-  border-bottom: 2px solid @color-fill_accent_strong;
-  color: @color-fill_text_inverse;
+  border-bottom: 2px solid @color-fill_text_inverse_accent;
+  color: @color-fill_text_inverse_accent;
 }
 
 .menu-element-icon {
