--- a/src/styles/controls.less
+++ b/src/styles/controls.less
@@ -5,6 +5,15 @@
   color: @color-fill_text_basic;
 }
 
+.app-link {
+  color: @color-fill_text_basic_action_link;
+}
+
+.app-link:hover {
+  opacity: 0.7;
+  cursor: pointer;
+}
+
 .app-text {
   color: @color-fill_text_basic;
 }
