--- a/src/app/pages/group/assign-lesson/assign-lesson.popup.html
+++ b/src/app/pages/group/assign-lesson/assign-lesson.popup.html
@@ -1,4 +1,4 @@
-<app-modal-template [id]="'groupLessonModal'" [title]="'Добавление занятия'" [modalVisible]="modalVisible">
+<app-modal-template *ngIf="!!lesson" [id]="'groupLessonModal'" [title]="'Добавление занятия'" [modalVisible]="modalVisible">
   <div class="modal-body">
     <form>
       <div app-form-select-control
@@ -10,6 +10,17 @@
            [items]="getTeachersItems()"
            [hasEmpty]="true"
            (onChangeNumber)="lesson.teacherId = $event"></div>
+
+      <br>
+
+      <div app-form-select-control
+           [name]="'teacherLogin'"
+           [label]="'Преподаватель'"
+           [valid]="!!lesson.teacherLogin"
+           [valueString]="lesson.teacherLogin"
+           [items]="getStaffMembersItems()"
+           [hasEmpty]="true"
+           (onChangeString)="lesson.teacherLogin = $event"></div>
 
       <br>
 
