--- a/src/app/pages/group/information/group-information.page.html
+++ b/src/app/pages/group/information/group-information.page.html
@@ -33,6 +33,16 @@
                [hasEmpty]="true"
                (onChangeNumber)="group.managerId = $event"></div>
 
+          <div app-form-select-control class="form-group"
+               [type]="'STRING'"
+               [name]="'headTeacherLogin'"
+               [label]="'Старший преподаватель'"
+               [valid]="!!group.headTeacherLogin"
+               [valueString]="group.headTeacherLogin"
+               [items]="getStaffMembersItems()"
+               [hasEmpty]="true"
+               (onChangeString)="group.headTeacherLogin = $event"></div>
+
           <div app-form-text-input-control class="form-group"
                [name]="'bookName'"
                [label]="'Название учебника'"
@@ -109,20 +119,18 @@
     <div class="page-right-menu">
     </div>
 
-    <app-assign-lesson-popup [teachers]="teachers" [cabinets]="cabinets"></app-assign-lesson-popup>
+    <app-assign-lesson-popup [teachers]="teachers" [cabinets]="cabinets" [staffMembers]="staffMembers"></app-assign-lesson-popup>
   </div>
 
   <div class="footer">
-    <button [disabled]="loadingInProgress || actionInProgress || !group.id"
+    <button [disabled]="loadingInProgress || loadingInProgress || !group.id"
             class="btn btn-danger pull-right horizontal-item" (click)="delete()">
       Удалить
-      <fa *ngIf="actionInProgress" name="spinner" class="loading-sign horizontal-item" animation="spin"></fa>
     </button>
 
-    <button [disabled]="loadingInProgress || actionInProgress"
+    <button [disabled]="loadingInProgress || loadingInProgress"
             class="btn btn-primary pull-right" (click)="save()">
       Сохранить
-      <fa *ngIf="actionInProgress" name="spinner" class="loading-sign horizontal-item" animation="spin"></fa>
     </button>
   </div>
 </div>
